@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.82.00
 
+              ppmhist: Add color summary to top of output, (except with
+              -noheader).
+
               pnmremap: Add -randomseed.
 
               pnmquant: Add -norandom, -randomseed.
